--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -2,5 +2,27 @@
 
 .flex-center {
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Titillium Web', sans-serif;   
+}
+.flex-center h1 {
+    font-size: 3rem;
+}
+
+.flex-center h2 {
+    font-size: 2rem;
+    margin-bottom: 0.1rem;
+}
+.flex-center h3 {
+    font-size: 5rem;
+    margin: 1rem auto 2rem;
+}
+
+
+.input-btn {
+    display: flex;
     justify-content: center;
+    /* width: 3rem;
+    height:1.5rem; */
 }
