--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     /* background-image: url(); */
-    background-color: blanchedalmond;
+    background-color: white;
     
   }
   
